
2011-01-21  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17024: CSH not rendered properly in select-type fields with renderMode = checkbox
	* Fixed bug #17186: Scheduler: CSH not displayed properly in docheader

2011-01-21  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #17129: Minor styling issues with live search

2011-01-21  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #17167: Cache ExtDirect::getAPI calls
	* Fixed bug #17181: Add Expires header to _.htaccess

2011-01-21  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #17140: htmlArea RTE: In WebKit, RTE inserts incorrect link if text is double-clicked
	* Updated htmlArea RTE version to 2.1.5
	* Fixed bug #16975: htmlArea RTE: Use parentNode rather than parentElement

2011-01-21  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #17169: Bug: Wrong color gradients for filter and new button in new page tree
	* Fixed bug #17179: No possibility to refresh the positioning of the toolbar items with a common function

2011-01-21  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17180: t3editor claims more then 100% width

2011-01-21  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17149: Remove sys_refindex_* tables and unused code

2011-01-20  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #14098: When sending mail, use TYPO3_CONF_VAR for default from address if no other address is provided (Thanks to Jeff Segars and Marcus Krause)

2011-01-20  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Fixed bug #17105: deprecate "disable_autocreate" feature
	* Fixed bug #17106: sys_workspace table should be defined at one place only
	* Fixed bug #17104: "Create new workspace projects" in be_users/be_groups not required anymore

2011-01-20  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #17114: Install Tool does not install extensions properly
	* Fixed bug #16926: Database is not updated during workspace-migration wizard