@@ -34,6 +34,7 @@
 2011-01-21  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Fixed bug #17129: Minor styling issues with live search
+	* Fixed bug #16702: TCEForm select dropdowns have text overlapping icon in Webkit
 
 2011-01-21  Steffen Gebert  <steffen@steffen-gebert.de>
 
